--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![test-coverage](https://github.com/edalfon/efun/workflows/test-coverage/badge.svg)](https://github.com/edalfon/efun/actions)
+[![codecov](https://codecov.io/gh/edalfon/efun/branch/main/graph/badge.svg?token=hXUa7O9iTB)](https://codecov.io/gh/edalfon/efun)
 <!-- badges: end -->
 
 `efun` is a miscellaneous package. A collection of functions that I have 
