--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![test-coverage](https://github.com/edalfon/efun/workflows/test-coverage/badge.svg)](https://github.com/edalfon/efun/actions)
 [![codecov](https://codecov.io/gh/edalfon/efun/branch/main/graph/badge.svg?token=hXUa7O9iTB)](https://codecov.io/gh/edalfon/efun)
-[![check-standard](https://github.com/edalfon/efun/workflows/check-standard/badge.svg)](https://github.com/edalfon/efun/actions)
+[![R-CMD-check](https://github.com/edalfon/efun/workflows/R-CMD-check/badge.svg)](https://github.com/edalfon/efun/actions)
 <!-- badges: end -->
 
 `efun` is a miscellaneous package. A collection of functions that I have 
